# 7guis-qt6

./: CMakeLists.txt  counter.cpp  main.cpp  tempconv.cpp
